	vc-hooks.el so it will become smarter whenever VC mode does.

	* vc-hooks.el: 'added is a real state, not a future hypothetical
	one. Fix the documentation.

	* vc-bzr.el, vc-cvs.el, vc-git.el, vc-hg.el, vc-mcvs.el, vc-svn.el:
	Modify all instances of the dir-state back-end method to suppress
	keeping undo lists on the buffers holding status output, which
	can get extremely large.

2007-12-28  Nick Roberts  <nickrob@snap.net.nz>

	* thumbs.el (thumbs-call-convert): Use call-process directly
	with thumbs-conversion-program instead of through shell-file-name
	for better error reporting.

2007-12-27  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-aent.el (math-remove-percentsigns):
	* calc/calccomp.el (math-to-percentsigns): Change placeholder
	for percent signs.

2007-12-27  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-dired-ignorable-p, vc-dired-hook): Speed optimization;
	use completion-ignored-extensions to detect files that should be
	ignorted in VC-Dired listings, heading off lots of expensive calls
	to (vc-state).

	* vc.el (vc-dired-hook): Show unregistered file status as "?" in
	non-terse mode.
	(vc-dired-ignorable-p): Ignore Makefile when it has a peer named
	Makefile.in or Makefile.am

2007-12-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-mark-active-p): Fun returned back.
	(ps-print-preprint-region): Use `ps-mark-active-p' instead of
	`region-active-p' for error checking.

2007-12-27  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el, vc-sccs.el, vc-rcs.el, vc-cs.el, vc-mcvs.el: Put
	new machinery in place to support editing of change comments
	with 'e' in a log-view buffer.  Not documented yet as this
	only works for SCCS, RCS, and maybe CVS if you have admin
	privileges.  When we have backend support for Subversion and
	more modern systems it will be time to write this up.

2007-12-27  Kenichi Handa  <handa@ni.aist.go.jp>

	* international/mule-cmds.el (select-safe-coding-system): When a